[package]
name = "xdeep-core"
version = "0.0.1"
edition = "2021"
authors = [
    "Loïc KASSEL <loic.kassel@grenoble-inp.org>",
    "Hugo MOUNIER <hugo.mounier@grenoble-inp.org>",
    "Hichame DEKKOUNE <hichame.dekkoune@grenoble-inp.org>",
    "Dilhan Aydin <dilhan.aydin@grenoble-inp.org>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ctrlc = { version = "3.0", features = ["termination"] }
libc = "0.2"
libbpf-rs = "0.18.0"
structopt = "0.3"

# tokio = { version = "1", features = ["full"] }
# warp = { version = "0.3", features = ["tls"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = { version = "1.0" }

[build-dependencies]
libbpf-cargo = "0.12.0"